--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 *{ box-sizing:
     border-box;}
 
-
-
 .header {
 
     display: flex;
@@ -130,4 +128,21 @@ footer {
     align-items: center;
 
     background-color: bisque;
+}
+
+.todos-productos {
+    display: flex;
+    flex-direction: row;
+}
+
+.article1 {
+  display: flex;
+  flex-direction: column;
+  
+  justify-content: space-evenly;
+  align-items: center;
+
+  padding: 10px;
+  margin: 5px;
+  background-color: rgb(255, 226, 226);
 }
