--- a/style.css
+++ b/style.css
@@ -146,3 +146,63 @@ footer {
   margin: 5px;
   background-color: rgb(255, 226, 226);
 }
+
+.sobre-nosotras {
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.parrafo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    width: 700px;
+    text-align: center;
+}
+
+.parrafo2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    width: 700px;
+    text-align: center;
+}
+
+.parrafo3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    width: 700px;
+    text-align: center;
+}
+
+.parrafo3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    width: 700px;
+    text-align: center;
+}
+
+.parrafo4 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    width: 700px;
+
+    text-align: center;
+}
