--- a/style.css
+++ b/style.css
@@ -166,3 +166,20 @@ footer {
     text-align: center;
 }
 
+.main-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.section-article {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
+    background-color: rgb(240, 202, 255);
+    padding: 10px;
+    margin: 10px;
+}
