--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 *{ box-sizing:
     border-box;}
 
+body {
+    background-color: rgb(255, 226, 226);;
+}
+
 .header {
 
     display: flex;
@@ -46,7 +50,7 @@
     .aside-nav {
         display: flex;
         flex-direction: column;
-        height: 100vh;
+        min-height: 100vh;
         width: fit-content;
         
         background-color: rgb(255, 193, 193);
@@ -57,6 +61,44 @@
         height: 80px;
         width: 80px;
     }
+
+    body {
+        display: flex;
+        flex-direction: row;
+    }
+    .todos-productos {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 98%;
+
+
+        flex-wrap: wrap;
+    }
+
+    .main-section {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 98%;
+
+
+        flex-wrap: wrap;
+    }
+    
+    .articulos {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 98%;
+
+
+        flex-wrap: wrap;
+    }
+
 }
 
 main {
@@ -146,9 +188,10 @@ footer {
 
   padding: 10px;
   margin: 5px;
-  background-color: rgb(255, 226, 226);
+  background-color: rgb(255, 193, 193);
 
-  width: 20%;
+
+  width: auto;
 }
 
 .imagen-productos{
@@ -226,3 +269,6 @@ footer {
     align-items: flex-start;
 }
 
+
+
+  
